fixed scrollbar issues in sidebar component, added focus onclick for search button

--- a/client/src/components/friendslist/friendslist.styles.scss
+++ b/client/src/components/friendslist/friendslist.styles.scss
@@ -6,15 +6,15 @@
   width: 100%;
   // height: fit-content;
 
+  font-size: 1rem;
+  font-weight: bold;
+
+  color: $highlight1;
+
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-
-  font-family: "Karla", sans-serif;
-  font-size: 1rem;
-  // font-weight: bold;
-  color: $highlight1;
 
   .friend-item {
     box-sizing: border-box;
@@ -63,30 +63,4 @@
       }
     }
   }
-
-  // .add-friend-container {
-  //   box-sizing: border-box;
-  //   padding: 0.5rem;
-  //   display: flex;
-  //   justify-content: space-between;
-  //   align-items: center;
-  //   // flex-direction: column;
-
-  //   #add-friend-btn {
-  //     background-color: transparent;
-  //     svg {
-  //       path {
-  //         fill: $highlight1;
-  //       }
-  //     }
-
-  //     &:hover {
-  //       svg {
-  //         path {
-  //           fill: $highlight2;
-  //         }
-  //       }
-  //     }
-  //   }
-  // }
 }
