--- a/client/src/components/user-avatar/user-avatar.styles.scss
+++ b/client/src/components/user-avatar/user-avatar.styles.scss
@@ -25,9 +25,9 @@ $avatar_size: 40px;
     position: absolute;
     left: 0;
     bottom: 0;
-    width: 0.7rem;
-    height: 0.7rem;
-    border-radius: 50%;
+    width: 0.5rem;
+    height: 0.5rem;
+    // border-radius: 50%;
   }
 
   .online {
